[Uptime] add fields for browser throttling on synthetic monitors
This commit allows the agent's configuration to specify what should be
the download speed, upload speed, and latency for a particular monitor.

This PR is related to elastic/kibana#118594.

--- a/packages/synthetics/data_stream/browser/manifest.yml
+++ b/packages/synthetics/data_stream/browser/manifest.yml
@@ -107,6 +107,24 @@ streams:
         multi: false
         required: false
         show_user: true
+      - name: throttling.download_speed
+        type: text
+        title: Throttles the monitor's download speed
+        multi: false
+        required: false
+        show_user: true
+      - name: throttling.upload_speed
+        type: text
+        title: Throttles the monitor's upload speed
+        multi: false
+        required: false
+        show_user: true
+      - name: throttling.latency
+        type: text
+        title: Defines the monitor's round-trip lag
+        multi: false
+        required: false
+        show_user: true
       - name: filter_journeys.tags
         type: yaml
         title: run only journeys with the given tag(s), or globs
