--- a/packages/synthetics/changelog.yml
+++ b/packages/synthetics/changelog.yml
@@ -1,4 +1,9 @@
 # newer versions go on top
+- version: "0.5.0"
+  changes:
+    - description: Allow users to set throttling.
+      type: enhancement
+      link: https://github.com/elastic/integrations/pull/2161
 - version: "0.4.2"
   changes:
     - description: Uniform with guidelines
